--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
+
 html, body {
   height: 100%;
   width: 100%;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 * {
   margin: 0;
@@ -9,6 +13,7 @@ html, body {
 .container {
   height: 100vh;
   width: 100%;
+  background-color: red;
   background-image: url(images/bg-img.png);
 background-position: center;
   background-size: cover;
@@ -40,6 +45,8 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: #fff;
+  line-height: 40px;
+  line-width: 20px;
 }
 nav ul li a:hover {
   text-decoration: underline;
@@ -50,6 +57,7 @@ nav ul li a:hover {
   margin-top: 25px;
   margin-bottom: 15px;
   color: #fff;
+  font-family: 'Roboto', sans-serif;
 }
 em {
   text-decoration: underline;
@@ -93,3 +101,74 @@ em {
 .social-media a:hover {
   color: red;
 }
+
+
+
+#about {
+    padding: 80px 0;
+}
+.tab-container {
+    padding: 10px 10%;
+}
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1 {
+    flex-basis: 35%;
+}
+.about-col-1 img {
+    width: 100%;
+    border-radius: 50%;
+    height: 400px;
+    max-width: 350px;
+}
+.about-col-2 {
+    flex-basis: 60%;
+}
+.sub-title {
+    font-size: 60px;
+    font-weight: 600;
+    color: black;
+  font-family: 'Roboto', sans-serif;
+}
+.tab-titles {
+    display: flex;
+    margin: 20px 0 40px;
+}
+.tab-links {
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after {
+    content: '';
+    width: 0%;
+    height: 2.5px;
+    background: red;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+.tab-links.active-link::after {
+    width: 50%;
+}
+.tab-contents ul li {
+    list-style: none;
+    margin: 6px 0;
+}
+.tab-contents ul li span {
+    color: red;
+    font-size: 14px;
+}
+.tab-contents {
+    display: none;
+}
+.tab-contents.active-tab {
+    display: block;
+}
+
